comparison-1/require-pod-requests-limits.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
 name: require-requests-limits
spec:
  validationActions: [Deny]
  evaluation: 
     background: 
           enabled: true
  matchConstraints:
        resourceRules:
          - apiGroups: ['']
            apiVersions: [v1]
            operations: [CREATE, UPDATE]
            resources: [pods]
  validations:
          - expression: >-
              object.spec.containers.all(container,
              has(container.resources) &&
              has(container.resources.requests) &&
              has(container.resources.requests.memory) &&
              has(container.resources.requests.cpu) &&
              has(container.resources.limits) &&
              has(container.resources.limits.memory))
            message: "CPU and memory resource requests and limits are required."
